--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,29 +22,29 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
-      - uses: actions/checkout@4
-      - uses: actions/setup-go@5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
           cache: true
       - run: go mod download
       - run: go build -v .
       - name: Run linters
-        uses: golangci/golangci-lint-action@34
+        uses: golangci/golangci-lint-action@v4
         with:
           version: latest
 
   generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@4
-      - uses: actions/setup-go@5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
           cache: true
       # Temporarily download Terraform 1.8 prerelease for function documentation support.
       # When Terraform 1.8.0 final is released, this can be removed.
-      - uses: hashicorp/setup-terraform@3
+      - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: "1.8.0-alpha20240216"
           terraform_wrapper: false
@@ -74,12 +74,12 @@ jobs:
           - "1.6.*"
           - "1.7.*"
     steps:
-      - uses: actions/checkout@4
-      - uses: actions/setup-go@5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
           cache: true
-      - uses: hashicorp/setup-terraform@3
+      - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: ${{ matrix.terraform }}
           terraform_wrapper: false
